--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,36 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/primaryColor</item>
-    <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
-    <item name="colorOnPrimary">@color/primaryLightColor</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/secondaryColor</item>
-    <item name="colorOnSecondary">@color/primaryDarkColor</item>
-    <!-- Background color. -->
-    <item name="android:colorBackground">@color/backgroundColor</item>
-    <!-- Text color. -->
-    <item name="android:textColor">@color/textColor</item>
-    <!-- Customize your theme here. -->
-</style>
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
+        <item name="colorOnPrimary">@color/primaryLightColor</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorOnSecondary">@color/primaryDarkColor</item>
+        <!-- Background color. -->
+        <item name="android:colorBackground">@color/backgroundColor</item>
+        <!-- Text color. -->
+        <item name="android:textColor">@color/textColor</item>
+        <!-- Customize your theme here. -->
+    </style>
 
     <style name="Theme.GamePage" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
+        <item name="colorOnPrimary">@color/primaryLightColor</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorOnSecondary">@color/primaryDarkColor</item>
+        <!-- Background color. -->
+        <item name="android:colorBackground">@color/backgroundColor</item>
+        <!-- Text color. -->
+        <item name="android:textColor">@color/textColor</item>
+        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme.ResultPage" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
