--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,29 +5,26 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
     android:background="@drawable/addbg"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        android:paddingTop="50dp">
+        android:paddingVertical="16dp">
 
         <TextView
             android:id="@+id/scoreLabel"
-            android:layout_width="58dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/score"
             android:textSize="16sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="33dp"
-            tools:layout_editor_absoluteY="16dp"
-            tools:text="@string/score" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/currentScore"
@@ -40,13 +37,12 @@
 
         <TextView
             android:id="@+id/lifeLabel"
-            android:layout_width="59dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/life"
             android:textSize="16sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="143dp"
-            tools:layout_editor_absoluteY="18dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/currentLife"
@@ -59,13 +55,12 @@
 
         <TextView
             android:id="@+id/timeLabel"
-            android:layout_width="53dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Time"
+            android:layout_weight="1"
+            android:text="@string/time"
             android:textSize="16sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="292dp"
-            tools:layout_editor_absoluteY="18dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/timeCurent"
@@ -82,47 +77,54 @@
         android:id="@+id/questionText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="TextView"
-        android:textSize="34sp" />
+        android:textSize="34sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/answerEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:backgroundTint="#2196F3"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/editTextHint"
-        android:inputType="text"
+        android:inputType="number"
         android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/okButton"
-            android:layout_width="160dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="?attr/colorPrimary"
             android:padding="10dp"
-            android:text="Ok"
-            tools:layout_editor_absoluteX="236dp"
-            tools:layout_editor_absoluteY="258dp" />
+            android:text="@android:string/ok"
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/nextButton"
-            android:layout_width="160dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:padding="10dp"
             android:text="@string/next"
-            tools:layout_editor_absoluteX="58dp"
-            tools:layout_editor_absoluteY="253dp" />
+            android:backgroundTint="?attr/colorPrimary"
+            android:textColor="@android:color/white"
+            style="@style/Widget.AppCompat.Button.Colored" />
     </LinearLayout>
 
 </LinearLayout>
